--- a/app/views/restaurants/no_result.html.erb
+++ b/app/views/restaurants/no_result.html.erb
@@ -1,5 +1,7 @@
-<div class="col-md-4 col-md-offset-4">
-	<h3>음식점 검색 결과가 없습니다.</h3>
-	<p><span class="ubuntu">MenuMap</span>의 음식점 이름, 분류가 정확하지 않을 수 있습니다.</p>
-	<p>추가하고 싶은 음식점이 있으시다면 <%= link_to "음식점 추가 신청", new_rest_register_path %>을 해주세요</p>
+<div class="container">
+	<div class="col-md-4 col-md-offset-4">
+		<h3>음식점 검색 결과가 없습니다.</h3>
+		<p><span class="ubuntu">MenuMap</span>의 음식점 이름, 분류가 정확하지 않을 수 있습니다.</p>
+		<p>추가하고 싶은 음식점이 있으시다면 <%= link_to "음식점 추가 신청", new_rest_register_path %>을 해주세요</p>
+	</div>
 </div>
