--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,38 +1,39 @@
 <% provide(:page_title, "회원가입") %>
 
+<div class="container">
+	<div class="col-md-6 col-md-offset-3">
+		<%= devise_error_messages! %>
 
-<div class="col-md-6 col-md-offset-3">
-	<%= devise_error_messages! %>
+		<div style="border-bottom: solid 1px gray; margin-bottom: 2em; padding: 1em 0;">
+			<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+				<legend>회원가입</legend>
 
-	<div style="border-bottom: solid 1px gray; margin-bottom: 2em; padding: 1em 0;">
-		<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-			<legend>회원가입</legend>
+				<div class="form-group">
+					<%= f.email_field :email, { class: "form-control", autofocus: true, placeholder: "이메일*" } %>
+				</div>
 
-			<div class="form-group">
-				<%= f.email_field :email, { class: "form-control", autofocus: true, placeholder: "이메일*" } %>
-			</div>
+				<div class="form-group">
+					<%= f.text_field :username, { class: "form-control", placeholder: "유저명*" } %>
+				</div>
 
-			<div class="form-group">
-				<%= f.text_field :username, { class: "form-control", placeholder: "유저명*" } %>
-			</div>
+				<div class="form-group">
+					<%= f.password_field :password, { class: "form-control", autocomplete: "off", placeholder: "비밀번호*" } %>
+				</div>
 
-			<div class="form-group">
-				<%= f.password_field :password, { class: "form-control", autocomplete: "off", placeholder: "비밀번호*" } %>
-			</div>
+				<div class="form-group">
+					<%= f.password_field :password_confirmation, { class: "form-control", autocomplete: "off", placeholder: "비밀번호 확인*" } %>
+				</div>
 
-			<div class="form-group">
-				<%= f.password_field :password_confirmation, { class: "form-control", autocomplete: "off", placeholder: "비밀번호 확인*" } %>
-			</div>
+				<div class="actions">
+					<%= f.button "가입", class: "btn btn-primary btn-block" %>
+				</div>
+			<% end %>
+		</div>
 
-			<div class="actions">
-				<%= f.button "가입", class: "btn btn-primary btn-block" %>
-			</div>
+		<%= link_to user_omniauth_authorize_path(:facebook), class: "btn btn-block btn-social btn-facebook" do %>
+			<i class="fa fa-facebook"></i> 페이스북으로 회원가입
 		<% end %>
 	</div>
-
-	<%= link_to user_omniauth_authorize_path(:facebook), class: "btn btn-block btn-social btn-facebook" do %>
-		<i class="fa fa-facebook"></i> 페이스북으로 회원가입
-	<% end %>
 </div>
 
 <script>
