--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -58,12 +58,30 @@ html, body, h1, h2, h3, h4, h5, h6, p, a, input, textarea, button {
 	font-size: 1.2em;
 }
 
+.blue_outline {
+	&:active, &:hover {
+		border-color: #66afe9;
+		outline: 0;
+		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+		box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+	}
+}
+
+a.rst_card_link {
+	color: initial;
+	&:active, &:hover {
+		text-decoration: none;
+	}
+}
+
 .rst_index_card {
 	display: inline-block;
 	width: 100%;
-	padding-bottom: 0.5em;
-	margin-bottom: 0.5em;
+	padding: 0.5em 0;
 	border-bottom: 1px solid #f0f0f0;
+	&:active {
+		background-color: #efefef;
+	}
 	.rst_img {
 		width: 120px; 
 		height: 90px; 
@@ -73,10 +91,11 @@ html, body, h1, h2, h3, h4, h5, h6, p, a, input, textarea, button {
 	.name {
 		padding-left: 0.5em;
 		max-width: 200px;
-		font-size: 1.2em;
+		color: initial;
 	}
 	.content {
 		display: inline-block; 
 		max-width: 200px;
+		color: #999;
 	}
 }
