--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -51,7 +51,7 @@
   //	});
 	//})
 	$(document).ready( function() {
-		loadNaverMap(<%= @center_x %>, <%= @center_y %>, 8);
+		loadNaverMap(<%= @center_x %>, <%= @center_y %>, <%= @level %>);
 		showMarkers(<%= @coord_array %>, true, <%= raw @names %>);
 		toggleLabels();
 	});
