--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,7 +5,7 @@
 
 <%= link_to "new restaurant", new_restaurant_path %>
 
-<%= will_paginate @restaurants %>
+<%= will_paginate @restaurants, :renderer => 'BootstrapPaginationHelper::LinkRenderer' %>
 
 <table class="table">
 	<tr>
