--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -99,3 +99,14 @@ a.rst_card_link {
 		color: #999;
 	}
 }
+
+#rst_show_tabs {
+	ul {
+		padding: 0;
+		li {
+			display: inline-block;
+			width: 19%;
+			text-align: center;
+		}
+	}
+}
