--- a/app/views/mymaps/_field.html.erb
+++ b/app/views/mymaps/_field.html.erb
@@ -1,9 +1,9 @@
 <div id="star_rating_form" data-score=<%= @mymap.rating %>></div>
 
 <%= f.label :group %>
-<% 1.upto(10) do |n| %>
+<% 1.upto(9) do |n| %>
 	<label for="mymap_group_<%= n %>"> 
-		<%= image_tag "/images/mymaps/mymap_group_icon_#{n}.png", id: "mymap_group_icon_#{n}", style: "height: 20px; width: 20px;" %> 
+		<%= image_tag "/images/mymaps/mymap_group_icon_#{n}.svg", id: "mymap_group_icon_#{n}", style: "height: 20px; width: 20px;" %> 
 		<%= f.radio_button :group, n %>
 	</label>
 <% end %>
