--- a/app/views/mymaps/_show.html.erb
+++ b/app/views/mymaps/_show.html.erb
@@ -18,7 +18,7 @@
 		<% end %>
 
 		<% if @mymap.group != 0 %>
-			<td><%= image_tag "/images/mymaps/mymap_group_icon_" + @mymap.group.to_s + ".png", id: "mymap_group_icon_" + @mymap.group.to_s, style: "height: 20px; width: 20px;" %></td>
+			<td><%= image_tag "/images/mymaps/mymap_group_icon_" + @mymap.group.to_s + ".svg", id: "mymap_group_icon_" + @mymap.group.to_s, style: "height: 20px; width: 20px;" %></td>
 		<% else %>
 			<td></td>
 		<% end %>
