--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -100,13 +100,42 @@ a.rst_card_link {
 	}
 }
 
+#rst_show_top_img {
+	width: 100%;
+	max-height: 100px;
+	text-align: center;
+	background: repeating-linear-gradient( 45deg, #ccc, #ccc 10px, #eee 10px, #eee 20px );
+	.svg {
+		width: 100px;
+	}
+}
+
+#rst_show_title {
+	.name {
+		float: left; 
+		max-width: 270px;
+		h1 {
+			margin: 10px 0;
+		}
+	}
+	.right {
+		float: right;
+		margin: 5px 10px 0;
+		> div {
+			margin: 5px 0;
+		}
+	}
+}
+
 #rst_show_tabs {
 	ul {
+		margin: 5px 0;
 		padding: 0;
 		li {
 			display: inline-block;
 			width: 19%;
 			text-align: center;
+			padding: 10px 0;
 		}
 	}
 }
