--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,20 +1,26 @@
 <div class="container" style="margin-top: -20px; padding: 0;">
 	<div class="row" style="margin: 0;">
 		<div class="col-md-6 col-md-offset-3" style="padding: 0;">
-			<%= image_tag @pictures.first.img.url, style: "width: 100%;" %>
 
-			<div>
-				<div style="float: left; max-width: 270px;">
+			<% if @main_img %>
+				<%= image_tag @main_img.img.url, id: "rst_show_top_img" %>
+			<% else %>
+				<div id="rst_show_top_img">
+					<%= image_tag "/images/restaurants/picture_add_icon.svg", class: "svg" %>
+				</div>
+			<% end %>
+
+			<div id="rst_show_title">
+				<div class="name">
 					<h1 style="font-size: 2em;"><%= @restaurant.name %></h1>
 					<div>
 						<p><%= @restaurant.subcategory.name %> <%= delivery_possible_with_middot(@restaurant) %></p>
 					</div>
 				</div>
 
-				<div style="float: right;">
-					<!-- share, share-alt -->
-					<i class="fa fa-share-alt"></i> 공유
-					<span onclick="$('#tab_map').click();"><i class="fa fa-globe"></i> 지도</span>
+				<div class="right">
+					<div><i class="fa fa-share-alt"></i> 공유</div>
+					<div onclick="$('#tab_map').click();"><i class="fa fa-globe"></i> 지도</div>
 				</div>
 			</div>
 		</div>
