--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -139,3 +139,14 @@ a.rst_card_link {
 		}
 	}
 }
+
+#carousel {
+	.item {
+		height: 240px;
+		img {
+			max-width: 100%;
+			max-height: 100%;
+			margin: 0 auto;
+		}
+	}
+}
