--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -2,8 +2,8 @@
 	<div class="row" style="margin: 0;">
 		<div class="col-md-6 col-md-offset-3" style="padding: 0;">
 
-			<% if @main_img %>
-				<%= image_tag @main_img.img.url, id: "rst_show_top_img" %>
+			<% if @pictures.first.present? %>
+				<%= image_tag @pictures.first.img.url, id: "rst_show_top_img" %>
 			<% else %>
 				<div id="rst_show_top_img">
 					<%= image_tag "/images/restaurants/picture_add_icon.svg", class: "svg" %>
@@ -82,6 +82,26 @@
 
 					<!-- Picture -->
 					<div role="tabpanel" class="tab-pane fade" id="picture">
+
+						<div id="carousel" class="carousel slide" data-ride="carousel">
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner" role="listbox">
+								<% @pictures.each do |picture| %>
+									<div class="item">
+										<%= image_tag picture.img.url %>
+									</div>
+								<% end %>
+							</div>
+
+							<!-- Controls -->
+							<a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+								<span class="glyphicon glyphicon-chevron-left"></span>
+							</a>
+							<a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+								<span class="glyphicon glyphicon-chevron-right"></span>
+							</a>
+						</div>
+
 						<%= form_for @picture, html: { multipart: true } do |f| %>
 							<%= f.hidden_field :imageable_id, value: @picture.imageable_id %>
 							<%= f.hidden_field :imageable_type, value: @picture.imageable_type %>
@@ -124,6 +144,8 @@
 		loadNaverMap(<%= @curr_lat %>, <%= @curr_lng %>, 9);
 		showMarkers([<%= @curr_lat %>, <%= @curr_lng %>], true, ["<%= @restaurant.name %>"]);  
 		toggleLabels();
+
+		$("#carousel .item:first-of-type").addClass("active")
 	
 		<% if @restaurant.with_latlng? %>
 			parseFoursquareImg("<%= request.url %>");
