--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -87,6 +87,10 @@ a.rst_card_link {
 		height: 90px; 
 		float: left;
 		margin: 0 0.5em 0 0;
+		img {
+			width: 100%;
+			height: 100%;
+		}
 	}
 	.name {
 		padding-left: 0.5em;
@@ -107,6 +111,12 @@ a.rst_card_link {
 	background: repeating-linear-gradient( 45deg, #ccc, #ccc 10px, #eee 10px, #eee 20px );
 	.svg {
 		width: 100px;
+	}
+}
+
+@media (min-width: 992px) {
+	#rst_show_top_img {
+		max-height: 200px;
 	}
 }
 
@@ -131,11 +141,14 @@ a.rst_card_link {
 	ul {
 		margin: 5px 0;
 		padding: 0;
-		li {
-			display: inline-block;
-			width: 19%;
-			text-align: center;
-			padding: 10px 0;
+		a {
+			color: initial;
+			li {
+				display: inline-block;
+				width: 19%;
+				text-align: center;
+				padding: 10px 0;
+			}
 		}
 	}
 }
@@ -145,8 +158,31 @@ a.rst_card_link {
 		height: 240px;
 		img {
 			max-width: 100%;
-			max-height: 100%;
+			height: 100%;
 			margin: 0 auto;
 		}
+	}
+}
+
+@media (min-width: 992px) {
+	#carousel {
+		.item {
+			height: 390px;	
+		}
+	}
+}
+
+div.MultiFile-wrap > input {
+	display: none;
+}
+
+span.MultiFile-label {
+	float: left;
+}
+
+#picture_img_list {
+	margin-bottom: 10px;
+	a.MultiFile-remove {
+		margin-left: 5px;
 	}
 }
