--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,16 +7,18 @@
 		<% @restaurants.each do |restaurant| %>
 			<%= link_to restaurant_path(restaurant), class: "rst_card_link" do %>
 				<div id="rst_<%= restaurant.id %>" class="rst_index_card">
-					<%= restaurant_picture(restaurant) %>
+					<div class="rst_img">
+						<%= restaurant_picture(restaurant) %>
+					</div>
 
 					<div class="content">
 						<%= restaurant_name_with_menu_on(restaurant) %><br />
-						<%= menus_or_category(restaurant) %><br />
-						<%= delivery_possible?(restaurant) %> <%= gu_and_dong(restaurant) %>
+						<span style="font-size: 0.8em;">
+							<%= menus_or_category(restaurant) %><br />
+							<%= delivery_possible?(restaurant) %> <%= gu_and_dong(restaurant) %>
+						</span>
 					</div>
 
-					<!--%= menu_on_helper(restaurant) %-->
-					<!--% restaurant.title_menus(2).each do |menu| %-->
 					<%= link_to "destroy", restaurant_path(restaurant), method: :delete if admin_user? %>
 				</div>
 			<% end %>
