--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -8,7 +8,7 @@
 		</div>
 
 		<% @notices.each do |notice| %>
-			<a data-toggle="collapse" href="#notice_<%= notice.id %>" class="notice_question">
+			<a data-toggle="collapse" href="#notice_<%= notice.id %>" class="dropdown_angle">
 				<h3><i class="fa fa-angle-right"></i> <%= notice.question %></h3>
 			</a>
 			<div id="notice_<%= notice.id %>" class="panel-collapse collapse">
@@ -27,9 +27,3 @@
 <% end %>
 
 <%= render 'shared/modal' %>
-
-<script>
-	$('.notice_question').on('click', function() {
-		$(this).find('i').toggleClass('fa-angle-down');
-	});
-</script>
