--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -32,11 +32,11 @@
 		<div class="col-md-6 col-md-offset-3" style="padding: 0;">
 			<div id="rst_show_tabs">
 				<ul>
-					<a href="#menu" role="tab" data-toggle="tab"><li><i class="fa fa-list-ul"></i></li></a>
-					<a href="#comment" role="tab" data-toggle="tab"><li><i class="fa fa-comment-o"></i></li></a>
-					<a href="#blog" role="tab" data-toggle="tab"><li><i class="fa fa-newspaper-o"></i></li></a>
-					<a href="#picture" role="tab" data-toggle="tab"><li><i class="fa fa-picture-o"></i></li></a>
-					<a href="#info" role="tab" data-toggle="tab"><li><i class="fa fa-info"></i></li></a>
+					<a href="#menu" role="tab" data-toggle="tab"><li><i class="fa fa-list-ul"></i><br/>메뉴</li></a>
+					<a href="#comment" role="tab" data-toggle="tab"><li><i class="fa fa-commenting"></i><br/>댓글</li></a>
+					<a href="#blog" role="tab" data-toggle="tab"><li><i class="fa fa-newspaper-o"></i><br/>블로그</li></a>
+					<a href="#picture" role="tab" data-toggle="tab"><li><i class="fa fa-picture-o"></i><br/>사진</li></a>
+					<a href="#info" role="tab" data-toggle="tab"><li><i class="fa fa-info"></i><br/>정보</li></a>
 					<a id="tab_map" href="#map" role="tab" data-toggle="tab"><li style="display: none;">지도</li></a>
 				</ul>
 			</div>
