Append foursquare images to picture tab

--- a/app/views/foursquares/_show.html.erb
+++ b/app/views/foursquares/_show.html.erb
@@ -1,1 +1,4 @@
-<p><%= image.username %> | <%= image_tag image.url %></p>
+<!-- image.username -->
+<div class="item">
+	<%= image_tag image.url, style: "width: 100%; height: 100%;" %>
+</div>
