--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -83,33 +83,33 @@
 					<!-- Picture -->
 					<div role="tabpanel" class="tab-pane fade" id="picture">
 
-						<% if @pictures.present? %>
-							<div id="carousel" class="carousel slide" data-ride="carousel">
-								<!-- Wrapper for slides -->
-								<div class="carousel-inner" role="listbox">
-									<% @pictures.each do |picture| %>
-										<div class="item">
-											<%= image_tag picture.img.url %>
-										</div>
-									<% end %>
-								</div>
-
-								<!-- Controls -->
-								<a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-									<span class="glyphicon glyphicon-chevron-left"></span>
-								</a>
-								<a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-									<span class="glyphicon glyphicon-chevron-right"></span>
-								</a>
+						<div id="carousel" class="carousel slide" data-ride="carousel" style="display: block;">
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner" role="listbox">
+								<% @pictures.each do |picture| %>
+									<div class="item">
+										<%= image_tag picture.img.url %>
+									</div>
+								<% end %>
 							</div>
-						<% else %>
+
+							<!-- Controls -->
+							<a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+								<span class="glyphicon glyphicon-chevron-left"></span>
+							</a>
+							<a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+								<span class="glyphicon glyphicon-chevron-right"></span>
+							</a>
+						</div>
+
+						<div id="no_img" style="display: <%= no_img?(@pictures) %>;">
 							<div class="row" style="margin: 0; padding: 0 15px;">
 								<div class="col-xs-10 col-xs-offset-1" style="text-align: center; margin-top: 10px;">
 									현재 등록된 사진이 없습니다.</br>
 									사진을 등록해주세요.
 								</div>
 							</div>
-						<% end %>
+						</div>
 
 						<div class="row" style="margin: 0; padding: 0 15px;">
 							<%= form_for @picture, html: { multipart: true, style: "margin-top: 10px;" } do |f| %>
@@ -161,6 +161,8 @@
 
 		<% if @restaurant.with_latlng? %>
 			parseFoursquareImg("<%= request.url %>");
+		<% elsif @pictures.blank? %>
+			$("#carousel").css("display", "none");
 		<% end %>
 
 		imageUploadValidate();
