--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -195,6 +195,15 @@ span.MultiFile-label {
 	}
 }
 
+.img_owner {
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	color: white;
+	font-weight: bold;
+	text-shadow: 0 1px 2px rgba(0,0,0,.6);
+}
+
 .left_border_label {
 	padding-left: 0.5em;
 	border-left-style: solid;
