--- a/app/views/foursquares/_show.html.erb
+++ b/app/views/foursquares/_show.html.erb
@@ -1,4 +1,4 @@
-<!-- image.username -->
 <div class="item">
 	<%= image_tag image.url, style: "width: 100%; height: 100%;" %>
+	<div class="img_owner"><%= image.username %>@Foursquare</div>
 </div>
